# etoro

helm/: README.md
helm/simple-web/: Chart.yaml  values.yaml
helm/simple-web/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  scaledobject.yaml  service.yaml
jenkins/: Jenkinsfile  README.md
python/: .gitignore  README.md  pyproject.toml
python/src/book_fetcher/: __init__.py  cli.py  logging.py  metrics.py  models.py
python/src/book_fetcher/api/: __init__.py  open_library.py
python/src/book_fetcher/output/: __init__.py  base.py  json_writer.py
python/tests/: test_cli.py  test_json_writer.py  test_metrics.py  test_models.py  test_open_library_client.py
